src/main/java/com/example/autorepairshop/error/CarAlreadyExistException.java
package com.example.autorepairshop.error;

public class CarAlreadyExistException extends RuntimeException {
    public CarAlreadyExistException(String message) {
        super(message);
    }
}
